add installation instructions for RedHat

--- a/tasks/dependencies_deb.yml
+++ b/tasks/dependencies_deb.yml
@@ -1,4 +1,5 @@
 ---
-- name: Install dependencies
+- name: Install Debian dependencies
   apt: name={{ item }} state=installed
+  when: ansible_os_family == 'Debian'
   with_items: jenkins.deb.dependencies
