--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,11 @@ jenkins:
       - 'curl'
   cli_dest: '{{ jenkins_dest }}/jenkins-cli.jar' # Jenkins CLI destination
   updates_dest: '{{ jenkins_dest }}/updates_jenkins.json' # Jenkins updates file
+  RedHat:
+    repo: "http://jenkins-ci.org/redhat/jenkins.repo" # wget for Jenkins addition to repos.d
+    dependencies: # Jenkins dependencies
+      - 'java-1.7.0-openjdk'
+      - 'java-1.7.0-openjdk-devel'
+      - 'git-all'
+      - 'curl'
+      - 'python-apt'
