--- a/tasks/repo.yml
+++ b/tasks/repo.yml
@@ -4,7 +4,7 @@
   when: ansible_os_family == 'Debian'
 
 - name: Install python-software-properties
-  yum: name=python-software-properties state=installed update_cache=yes cache_valid_time=86400
+  yum: name=python-software-properties state=installed update_cache=yes
   when: ansible_os_family == 'RedHat'
 
 - name: Install python-pycurl
