--- a/tasks/repo.yml
+++ b/tasks/repo.yml
@@ -13,6 +13,8 @@
 
 - name: Add jenkins apt-key
   apt_key: data="{{ lookup('file', 'jenkins-ci.org.key') }}" state=present
+  when: ansible_os_family == 'Debian'
 
 - name: Add Jenkins repository
   apt_repository: repo='{{ jenkins.deb.repo }}' state=present update_cache=yes
+  when: ansible_os_family == 'Debian'
