--- a/tasks/cli.yml
+++ b/tasks/cli.yml
@@ -26,7 +26,7 @@
   sudo: yes
 
 - name: "Modify Jenkins Updates permissions: {{ jenkins.updates_dest }}"
-  file: path={{ jenkins.updates_dest }} state=present owner=jenkins group=jenkins mode=0755
+  file: path={{ jenkins.updates_dest }} state=file owner=jenkins group=jenkins mode=0755
   sudo: yes
 
 - name: Update-center Jenkins
