ignore errors in the handler

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,5 @@
 # Safe-restart Jenkins
 - name: Restart Jenkins
   sudo: yes
+  ignore_errors: true
   command: java -jar {{ jenkins.cli_dest }} -s http://localhost:8080 safe-restart
