--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 jenkins_dest: /opt/jenkins
-jenkins_lib: /var/lib/jenkins
+
 jenkins:
   deb:
     repo: 'deb http://pkg.jenkins-ci.org/debian binary/' # Jenkins repository
@@ -9,8 +9,12 @@ jenkins:
       - 'openjdk-7-jdk'
       - 'git'
       - 'curl'
+  dest: /opt/jenkins
   cli_dest: '{{ jenkins_dest }}/jenkins-cli.jar' # Jenkins CLI destination
   updates_dest: '{{ jenkins_dest }}/updates_jenkins.json' # Jenkins updates file
+  lib: /var/lib/jenkins
+  # jenkins_localurl: http://localhost:8080
+  localurl: https://localhost
   RedHat:
     repo: "http://jenkins-ci.org/redhat/jenkins.repo" # wget for Jenkins addition to repos.d
     dependencies: # Jenkins dependencies
