--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,18 +1,26 @@
 ---
 
-  # when: port is defined
+# when: port is defined
+# TODO - many of the REST API calls have 8080 port hard-coded
 - name: Configure Jenkins Port
+  when: port is defined and ansible_os_family == 'Debian'
   sudo: yes
-  lineinfile: dest=/etc/default/jenkins regexp=^HTTP_PORT= line='HTTP_PORT=-1' state=present create=yes
+  lineinfile: dest='{{ jenkins.deb.conf_dir }}/jenkins' regexp=^HTTP_PORT= line='HTTP_PORT={{ port }}' state=present create=yes
+
+- name: Configure Jenkins Port
+  when: port is defined and ansible_os_family == 'RedHat'
+  sudo: yes
+  lineinfile: dest='{{ jenkins.RedHat.conf_dir }}/jenkins' regexp=^JENKINS_PORT= line='JENKINS_PORT={{ port }}' state=present create=yes
 
 - name: Configure Jenkins Prefix
-  when: prefix is defined
+  when: prefix is defined and ansible_os_family == 'Debian'
   sudo: yes
-  lineinfile: dest=/etc/default/jenkins regexp=^PREFIX= line='PREFIX={{prefix}}' state=present create=yes
+  lineinfile: dest='{{ jenkins.deb.conf_dir }}/jenkins' regexp=^PREFIX= line='PREFIX={{prefix}}' state=present create=yes
 
-- name: "Jenkins Default permissions: /etc/default/jenkins"
-  file: path=/etc/default/jenkins state=file owner=jenkins group=jenkins mode=0755
+- name: "Jenkins Default permissions: {{ jenkins.deb.conf_dir }}/jenkins"
+  file: path='{{ jenkins.deb.conf_dir }}/jenkins' state=file owner=jenkins group=jenkins mode=0755
   sudo: yes
+  when: ansible_os_family == 'Debian'
 
 - name: Configure Jenkins E-mail
   when: email is defined
