--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,22 +2,21 @@
 jenkins_dest: /opt/jenkins
 
 jenkins:
+  cli_dest: '{{ jenkins_dest }}/jenkins-cli.jar' # Jenkins CLI destination
+  updates_dest: '{{ jenkins_dest }}/updates_jenkins.json' # Jenkins updates file
+  lib: /var/lib/jenkins
   deb:
     repo: 'deb http://pkg.jenkins-ci.org/debian binary/' # Jenkins repository
-    dependencies: # Jenkins dependencies
+    conf_dir: /etc/default
+    dependencies:
       - 'openjdk-7-jre'
       - 'openjdk-7-jdk'
       - 'git'
       - 'curl'
-  dest: /opt/jenkins
-  cli_dest: '{{ jenkins_dest }}/jenkins-cli.jar' # Jenkins CLI destination
-  updates_dest: '{{ jenkins_dest }}/updates_jenkins.json' # Jenkins updates file
-  lib: /var/lib/jenkins
-  # jenkins_localurl: http://localhost:8080
-  localurl: https://localhost
   RedHat:
     repo: "http://jenkins-ci.org/redhat/jenkins.repo" # wget for Jenkins addition to repos.d
-    dependencies: # Jenkins dependencies
+    conf_dir: /etc/sysconfig
+    dependencies:
       - 'java-1.7.0-openjdk'
       - 'java-1.7.0-openjdk-devel'
       - 'git-all'
