enable setting of port and http/https

--- a/tasks/cli.yml
+++ b/tasks/cli.yml
@@ -1,15 +1,19 @@
 ---
 # Handle plugins
 - name: "{{ startup_delay_s | default(10) }}s delay while starting Jenkins"
-  wait_for: port=8080 delay={{ startup_delay_s | default(10) }}
-  when: jenkins_install.changed
+  wait_for: port='{{port}}' delay={{ startup_delay_s | default(10) }}
+  when: port is defined and jenkins_install.changed
+
+- name: "{{ startup_delay_s | default(10) }}s delay while starting Jenkins"
+  wait_for: port='{{https_port}}' delay={{ startup_delay_s | default(10) }}
+  when: https_port is defined and jenkins_install.changed
 
 - name: "Create Jenkins CLI destination directory: {{ jenkins_dest }}"
   file: path={{ jenkins_dest }} state=directory owner=jenkins group=jenkins mode=0755
   sudo: yes
 
 - name: Get Jenkins CLI
-  get_url: url='http://localhost:8080/jnlpJars/jenkins-cli.jar' dest={{ jenkins.cli_dest }} mode=0440
+  get_url: url='{{jenkins_url}}/jnlpJars/jenkins-cli.jar' dest={{ jenkins.cli_dest }} mode=0440
   register: jenkins_local_cli
   until: "'OK' in jenkins_local_cli.msg or 'file already exists' in jenkins_local_cli.msg"
   retries: 5
@@ -30,7 +34,7 @@
   sudo: yes
 
 - name: Update-center Jenkins
-  shell: "cat {{ jenkins.updates_dest }} | sed '1d;$d' | curl -X POST -H 'Accept: application/json' -d @- 'http://localhost:8080/updateCenter/byId/default/postBack'"
+  shell: "cat {{ jenkins.updates_dest }} | sed '1d;$d' | curl -X POST -H 'Accept: application/json' -d @- '{{jenkins_url}}/updateCenter/byId/default/postBack'"
   when: jenkins_updates.changed
   notify:
     - 'Restart Jenkins'
