--- a/tasks/cli.yml
+++ b/tasks/cli.yml
@@ -2,7 +2,7 @@
 # Handle plugins
 - name: "{{ startup_delay_s | default(10) }}s delay while starting Jenkins"
   wait_for: port='{{port}}' delay={{ startup_delay_s | default(10) }}
-  when: port is defined and jenkins_install.changed
+  when: port is defined and port != '-1' and jenkins_install.changed
 
 - name: "{{ startup_delay_s | default(10) }}s delay while starting Jenkins"
   wait_for: port='{{https_port}}' delay={{ startup_delay_s | default(10) }}
