--- a/tasks/plugins.yml
+++ b/tasks/plugins.yml
@@ -7,6 +7,15 @@
 - name: Install/update plugins
   shell: java -jar {{ jenkins.cli_dest }} -s '{{jenkins_url}}' -noCertificateCheck install-plugin {{ item }}
   when: plugins_installed.changed and plugins_installed.stdout.find('{{ item }}') == -1
+  register: plugins_updated
+  ignore_errors: true
+  with_items: plugins
+  notify:
+    - 'Restart Jenkins'
+
+- name: Install/update plugins with authentication
+  shell: java -jar {{ jenkins.cli_dest }} -s '{{jenkins_url}}' -noCertificateCheck install-plugin {{ item }} --username '{{ jenkins_ui_user }}' --password '{{ jenkins_ui_password }}'
+  when: plugins_updated.changed and plugins_installed.changed and plugins_installed.stdout.find('{{ item }}') == -1
   with_items: plugins
   notify:
     - 'Restart Jenkins'
@@ -18,5 +27,13 @@
 - name: Update plugins
   shell: java -jar '{{ jenkins.cli_dest }}' -s '{{jenkins_url}}' -noCertificateCheck install-plugin {{ plugins_updates.stdout }}
   when: plugins_updates.stdout != ''
+  register: plugins_updated2
+  ignore_errors: true
+  notify:
+    - 'Restart Jenkins'
+
+- name: Update plugins with authentication
+  shell: java -jar '{{ jenkins.cli_dest }}' -s '{{jenkins_url}}' -noCertificateCheck install-plugin {{ plugins_updates.stdout }} --username '{{ jenkins_ui_user }}' --password '{{ jenkins_ui_password }}'
+  when: plugins_updated2.changed and plugins_updated2.rc is defined and plugins_updated2.rc != 0 and plugins_updates.stdout != ''
   notify:
     - 'Restart Jenkins'
